# utf_utils

./: .gitignore  CMakeLists.txt  README.md  UtfUtils.sln  UtfUtils.vcxproj  UtfUtils.vcxproj.filters  run_cmake.sh  setup_cmake_builds.sh  utf8_notes.rtf
src/: utf_utils.cpp  utf_utils.h
test/: av_utf8.c  av_utf8.h  boost_utf8.hpp  boost_utf8_config.hpp  hoehrmann.cpp  hoehrmann.h  llvm_convert_utf.c  llvm_convert_utf.h  test_basics.cpp  test_conversions_16.cpp  test_conversions_32.cpp  test_main.cpp  test_main.h
test/data/: hindi_wiki_in_russian.txt  japanese_wiki.txt  kermit.txt  russian_wiki.txt  stress_test_0.txt  stress_test_1.txt  stress_test_2.txt  swedish_wiki.txt  z1_kosme.txt
test/windows-iconv/include/: iconv.h
test/windows-iconv/lib/x64/: libiconv_static.lib  libiconv_static_debug.lib
test/windows-iconv/lib/x86/: libiconv_static.lib  libiconv_static_debug.lib
test_data/: hindi_wiki.txt  hindi_wiki_in_english.txt  z1_ascii.txt
